--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ During my BS Computer Science, I have done many Project till now.<br>
 <b>Employment Status:</b> internship <br>
 <b>Relationship status:</b> Single <br> 
 <b>Mob:</b> 0337-1437185 <br>
-<b>E-Mail:</b><a href=" zarfishanwajid@gmail.com ">zarfishanwajid@gmail.com</a> <br>
+<b>E-Mail:</b><a href=" mailto:zarfishanwajid@gmail.com ">zarfishanwajid@gmail.com</a> <br>
 </p>
   </body>
      </html> 
