--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>  
 <body> 
 <center>
-<img src="zar.jpg " alt="Smiley face" align="middle" height="200" width="200"></center>
+<img src="zar.jpg " align="middle" height="200" width="200"></center>
 <center>
  <p>
    <h1>
@@ -26,16 +26,20 @@
 </p>  
 
   <h2>Qualification </h2>
- 
-<ul>
-  <li><b>FAST National University of Computer and Emerging Sciences, Lahore [2016-2020]</b></li> 
-     Bachelor of Computer Science<br>
-  <li><b>Kinnaird College for Women [2014-2016]</b></li>
-     HSSC (Higher Secondary School Certificate)<br>  
-  <li><b>Laurel bank Public School, Lahore [2012-2014]</b></li>
-	Matriculation  
-</ul>
- 
+  <table>
+    <tr> 
+	  <td><b>FAST National University of Computer and Emerging Sciences, Lahore [2016-2020] </b></td> 
+    <td>Bachelor of Computer Science</td>
+	</tr>
+   <tr>
+    <td><b>Kinnaird College for Women [2014-2016]</b></td>
+    <td> HSSC (Higher Secondary School Certificate)<br></td> 
+   </tr>  	 
+  <tr>
+    <td><b>Laurel bank Public School, Lahore [2012-2014]</b></td>
+	<td>Matriculation </td> 
+  </tr>
+  </table>
 	<h2>Technical Skills</h2>
 
 <p>	
